# fractal-feature-explorer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  run_psrecord.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: centralized_explorer_config.toml  example.toml
example-config-files/: development-config.toml  local-config.toml  local-streamlit-config.toml  remote-config.toml  remote-streamlit-config.toml
src/fractal_explorer/: __init__.py  authentication.py  config.py  main.py
src/fractal_explorer/explore_page/: __init__.py  _heat_map_plot.py  _scatter_plot.py  explore_page.py
src/fractal_explorer/explore_utils/: __init__.py  explore.py  heat_map.py  scatter_plot.py
src/fractal_explorer/filters_page/: __init__.py  _column_filter.py  _histogram_filter.py  _scatter_filter.py  filters_page.py
src/fractal_explorer/filters_utils/: __init__.py  column_filter.py  filters.py  histogram_filter.py  scatter_filter.py
src/fractal_explorer/pages/: 1_setup.py  2_filters.py  3_explore.py  4_export.py  export_page.py  info.py
src/fractal_explorer/pages/explore_page/: __init__.py  _heat_map_plot.py  _scatter_plot.py  explore_page.py
src/fractal_explorer/pages/filters_page/: __init__.py  _column_filter.py  _histogram_filter.py  _scatter_filter.py  filters_page.py
src/fractal_explorer/pages/setup_page/: _plate_advanced_selection.py  _plate_mode_setup.py  _tables.py  _tables_io.py  _utils.py  setup_page.py
src/fractal_explorer/setup_page/: _plate_advanced_selection.py  _plate_mode_setup.py  _tables.py  _utils.py  page.py  setup_page.py
src/fractal_explorer/setup_utils/: __init__.py  plate_mode_setup.py
src/fractal_explorer/utils/: __init__.py  common.py  config.py  ngio_caches.py  ngio_io_caches.py  st_components.py
src/fractal_feature_explorer/: __init__.py  app.py  authentication.py  cli.py  config.py  main.py
src/fractal_feature_explorer/api/: _alive.py
src/fractal_feature_explorer/pages/: export_page.py  info.py
src/fractal_feature_explorer/pages/explore_page/: _heat_map_plot.py  _scatter_plot.py  explore_page.py
src/fractal_feature_explorer/pages/filters_page/: __init__.py  _column_filter.py  _common.py  _histogram_filter.py  _scatter_filter.py  filters_page.py
src/fractal_feature_explorer/pages/setup_page/: _plate_advanced_selection.py  _plate_mode_setup.py  _tables_io.py  _utils.py  setup_page.py
src/fractal_feature_explorer/utils/: __init__.py  common.py  ngio_io_caches.py  st_components.py
tests/: conftest.py  test_app.py  test_is_http_fractal_url.py  test_ngio_io.py
