[project]
authors = [{ name = "lorenzo", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = [
    "streamlit>=1.58.0, <1.59.0",
    "ngio>=0.5.0, <0.6.0",
    "plotly",
    "matplotlib",
    "orjson",
    "rich",
    "urllib3",
    "secure >=2.0.1, <2.1.0",
]
name = "fractal-feature-explorer"
requires-python = ">=3.12,<3.14"
dynamic = ["version"]
description = "A Dashboard for exploring features in OME-Zarr datasets."
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]


[project.urls]
homepage = "https://github.com/fractal-analytics-platform/fractal-feature-explorer"
repository = "https://github.com/fractal-analytics-platform/fractal-feature-explorer"

[project.optional-dependencies]
dev = [
    "devtools",
    "notebook",
    "pre-commit",
    "ruff",
    "watchdog",
]

test = ["pytest", "pytest-cov", "devtools"]


[project.scripts]
explorer = "fractal_feature_explorer.cli:cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
fractal_feature_explorer = { path = ".", editable = true }
# ngio = { path = "../ngio", editable = true }


[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "dev" }
test = { features = ["test"], solve-group = "test" }

[tool.ruff.lint]
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]


# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true

